# sendspin-vst

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  bundler.toml  sendspin-vst-plugin-plan.md
.github/workflows/: release.yml
src/: config.rs  constants.rs  lib.rs  mdns.rs  network.rs  state.rs
